# django-compose-example

./: .env  .gitignore  README.md  compose.yaml
pgadmin/: passfile  servers.json
src/: pyproject.toml
src/example/: settings.py  urls.py
