[tool.poetry]
name = "example"
version = "0.1.0"
description = "This is a sample project demonstrating how to use Django with Compose during development"
authors = ["SharUpOff<sharupoff@efstudios.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
django = ">=4.2,<5.0"
django-environ = ">=0.11.2,<0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
