[tool.poetry]
name = "example"
version = "0.1.0"
description = "This is a sample project demonstrating how to use Django with Compose during development"
authors = ["SharUpOff <sharupoff@efstudios.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12"
django = ">=4.2,<5.0"
django-environ = ">=0.11.2,<0.12.0"
psycopg2-binary = ">=2.9,<3.0"
django-starcross-gallery = ">=1.1,<2.0"
django-redis = ">=5.4,<6.0"
celery = ">=5.3,<6.0"
flower = ">=2.0,<3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
